removed duplicate rootca logic from workbox

--- a/containers/workbox/Containerfile
+++ b/containers/workbox/Containerfile
@@ -1,4 +1,3 @@
-ARG jq_version=1.6
 ARG yq_version=4.26.1
 ARG step_version=0.21.0
 ARG helm_version=3.9.2
@@ -11,15 +10,13 @@ LABEL org.opencontainers.image.source="https://github.com/wranders/lab" \
     org.opencontainers.image.title="workbox" \
     org.opencontainers.image.description="Tools to configure and deploy Lab"
 
-ARG jq_version yq_version step_version helm_version cosign_version TARGETARCH
+ARG yq_version step_version helm_version cosign_version TARGETARCH
 
 RUN dnf install -y --setopt=install_weak_deps=False --nodocs \
     bash-completion \
     ncurses \
-    jq-${jq_version} \
-    dbus-daemon \
-    procps \
-    yubico-piv-tool \
+    jq \
+    util-linux \
     && dnf clean all
 
 WORKDIR /root
@@ -36,15 +33,9 @@ RUN useradd workbox --uid 1000 -G wheel && \
     echo '%wheel ALL=(ALL) NOPASSWD: ALL' > /etc/sudoers.d/wheel-nopasswd &&\
     chmod 600 /etc/sudoers.d/wheel-nopasswd
 
-RUN groupadd --system pcscd && \
-    mkdir -p /run/{dbus,pcscd}
-
-COPY ./entrypoint.sh /usr/local/bin/entrypoint.sh
-RUN chmod +x /usr/local/bin/entrypoint.sh
-
 RUN chown workbox: /srv
 WORKDIR /srv
 USER workbox
 
-ENTRYPOINT [ "/usr/local/bin/entrypoint.sh" ]
-CMD [ "/usr/bin/bash" ]
+ENTRYPOINT [ "/usr/bin/bash" ]
+
