fixed rootca README exclusion in container build

--- a/.github/workflows/build-rootca.yaml
+++ b/.github/workflows/build-rootca.yaml
@@ -5,7 +5,7 @@ on:
   push:
     paths:
     - 'containers/rootca/*'
-    - '!container/rootca/README.md'
+    - '!containers/rootca/README.md'
   workflow_dispatch:
 jobs:
   build:
