--- a/containers/rootca/Containerfile
+++ b/containers/rootca/Containerfile
@@ -17,6 +17,9 @@ RUN dnf install -y --setopt=install_weak_deps=False --nodocs \
     openssl \
     openssl-pkcs11 \
     util-linux \
+    git \
+    jq \
+    openssh \
     && dnf clean all
 
 RUN mkdir -p /run/{dbus,pcscd}
