--- a/.github/workflows/build-builder.yaml
+++ b/.github/workflows/build-builder.yaml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: docker/setup-qemu-action@v2
       with:
-        platforms: linux/amd64,linux/arm64,linux/arm/v7
+        platforms: linux/amd64,linux/arm64
     - uses: docker/setup-buildx-action@v2
       id: buildx
     - uses: docker/login-action@v2
@@ -32,7 +32,7 @@ jobs:
         builder: ${{ steps.buildx.outputs.name }}
         context: containers/builder/
         file: containers/builder/Containerfile
-        platforms: linux/amd64,linux/arm64,linux/arm/v7
+        platforms: linux/amd64,linux/arm64
         push: true
         tags: |
           ghcr.io/wranders/lab-builder:latest
