--- a/.github/workflows/build-dns.yaml
+++ b/.github/workflows/build-dns.yaml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow
 ---
-name: Build Lab DNS Image
+name: Build Lab Builder Image
 on:
   push:
     paths:
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: docker/setup-qemu-action@v2
       with:
-        platforms: linux/amd64,linux/arm64,linux/arm/v7
+        platforms: linux/amd64,linux/arm64
     - uses: docker/setup-buildx-action@v2
       id: buildx
     - uses: docker/login-action@v2
@@ -32,7 +32,7 @@ jobs:
         builder: ${{ steps.buildx.outputs.name }}
         context: containers/dns/
         file: containers/dns/Containerfile
-        platforms: linux/amd64,linux/arm64,linux/arm/v7
+        platforms: linux/amd64,linux/arm64
         push: true
         tags: |
           ghcr.io/wranders/lab-dns:latest
