--- a/containers/workbox/Containerfile
+++ b/containers/workbox/Containerfile
@@ -12,8 +12,8 @@ LABEL org.opencontainers.image.source="https://github.com/wranders/lab" \
 
 ARG yq_version step_version helm_version cosign_version TARGETARCH
 
-RUN dnf update -y --setopt=install_weak_deps=False --nodocs \
-    && dnf install -y --setopt=install_weak_deps=False --nodocs \
+RUN dnf update -y --setopt=install_weak_deps=False \
+    && dnf install -y --setopt=install_weak_deps=False \
     bash-completion \
     ncurses \
     jq \
